Changes since last push:
 - Now putting an item in the hotbar removes it from the mouseSlot and puts it
in the inventory

Known "features":
 - The strenth of gravity is independent of the world.
 - Things that move multiple tiles per second won't collide as if they were moving in a straight line. The best way to solve this may be to not allow anything to move that fast, possibly via multiple updates between renderings.
 - The spawn point sometimes puts the player on top of dirt. Spawning should be changed so it destroys any tiles in the way.

Known bugs:
 - Apparently the player can fit in gaps that they can't escape.

Soon to come (though likely not very soon):
 - Items
 - More types of tiles
 - Trees!
 - Better map generation
 - Instead of storing the health of every single tile on the map, I should just have a list of the ones that have been damaged.
 - hud
 - Make the spaceInfo class just store a tiletype, not a Tile*, and use it as
the index of the Tile*
 - Store data in a file instead of in the source code (eg the size of sprites
and the properties of the different types of tiles)